# dagster-onion-example

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  definitions.py  docker-compose.yml  pyproject.toml
domain/: models.py  repositories.py  services.py
infrastructure/: api_clients.py  storage.py
tests/: conftest.py  test_domain.py  test_infrastructure.py
ui/: cli.py
usecase/: assets.py  jobs.py
